--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="peter-color">Peter Perker</span> World!</h1>
@@ -24,7 +24,7 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -35,5 +35,24 @@
             <a href="#" class="btn">DOWNLOAD RESUME</a>
         </div>
     </section>
+    
+    <section class="experience-aria">
+    <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="experience-item" id="frond-end">
+                <h1>Frondend Developer</h1>
+                <h2 class="peter-color">2022-Present | Pro Level Developer</h2>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="experience-item" id="back-end">
+                <h2>Fullstack Developer</h2>
+                <h3 class="peter-color">2022-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Peter Parker 2022, a Programming Hero initiative.</p>
+    </footer>
 </body>
 </html>
