--- a/index.html
+++ b/index.html
@@ -4,55 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Takbir Portfolio</title>
+    <title>Portfolio Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="top-banner flexible-container">
+    <section class="top-part flex container">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="peter-color">Peter Perker</span> World!</h1>
+            <h1><span class="petercolor">Peter Perker</span> World!</h1>
             <h3>Build Climber and Train Stopper</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-            <a href="https://github.com/mohammedtakbir" class="btn" target="_blank">HIRE ME</a>
+            <p class="text-color">You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a href="#" class="btn">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
-
-    <section class="dream-big flexible-container">
-        <div class="half-width">
-            <img src="images/jhankar2.png" alt="">
-        </div>
-        <div class="half-width">
-            <h2>Dream Big</h2>
-            <h3>Become a web developer</h3>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a href="#" class="btn">DOWNLOAD RESUME</a>
-        </div>
-    </section>
-    
-    <section class="experience-aria">
-    <h1>Experiences</h1>
-        <div class="flexible-container">
-            <div class="experience-item" id="frond-end">
-                <h1>Frondend Developer</h1>
-                <h2 class="peter-color">2022-Present | Pro Level Developer</h2>
-                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
-            </div>
-            <div class="experience-item" id="back-end">
-                <h2>Fullstack Developer</h2>
-                <h3 class="peter-color">2022-Present | Pro Level Developer</h3>
-                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <p>© Peter Parker 2022, a Programming Hero initiative.</p>
-    </footer>
 </body>
 </html>
