--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="top-part flex container">
+    <section class="top-part flex">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="petercolor">Peter Perker</span> World!</h1>
@@ -21,6 +21,34 @@
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+    <section class="middle-part flex">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a web developer!</h3>
+            <p class="text-color">I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a href="#" class="btn">DOWNLOAD RESUME</a>
+        </div>
+        
+    </section>
+
+    <section class="bottom-part">
+        <h1>Experiences</h1>
+        <div class="flex">
+            <div id="fronend" class="half-width card">
+                <h1>Frondend | Developer</h1>
+                <h3 class="petercolor">2022-Present | Pro Level Developer</h3>
+                <p class="text-color">I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="backend" class="half-width card">
+                <h1>Fullstack | Developer</h1>
+                <h3 class="petercolor">2022-Present | Pro Level Developer</h3>
+                <p class="text-color">They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
         </div>
     </section>
 </body>
