--- a/index.html
+++ b/index.html
@@ -51,5 +51,11 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <p class="text-color">
+            © Peter Parker 2022, a Programming Hero initiative.
+        </p>
+    </footer>
 </body>
 </html>
